--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
                 <ul>
                     <li>Ram ilimitada</li>
                     <li>SSD ilimitado</li>
-                    <li>1 Datasca</li>
+                    <li>1 Base de Datos</li>
                     <li>1 Copia de ración</li>
                     <li>50 Slots</li>
+                    <li>1 Subida GM Gratis</li>
                 </ul>
                 <div class="price">$1 USD / 4.000 COP</div>
                 <button onclick="confirmarCompra('SA-MP #1','$1 USD / 4.000 COP')">Comprar</button>
@@ -84,7 +85,7 @@
                     <li>1 BD</li>
                     <li>2 Copias de seguridad</li>
                     <li>100 Slots</li>
-                    <li>2 Unidades GM</li>
+                    <li>2 Subida GM</li>
                 </ul>
                 <div class="price">$2.80 USD / 11.200 COP</div>
                 <button onclick="confirmarCompra('SA-MP #2','$2.80 USD / 11.200 COP')">Comprar</button>
