--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <li>1 BD</li>
                     <li>2 Copias de seguridad</li>
                     <li>100 Slots</li>
-                    <li>2 Unidades GM</li>
+                    <li>2 Subida GM</li>
                 </ul>
                 <div class="price">$3.40 USD / 11.200 COP</div>
                 <button onclick="confirmarCompra('SA-MP #3','$3.40 USD / 11.200 COP')">Comprar</button>
