--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <li>Ram ilimitada</li>
                     <li>SSD ilimitado</li>
                     <li>1 Base de Datos</li>
-                    <li>1 Copia de ración</li>
+                    <li>1 Copias de seguridad</li>
                     <li>50 Slots</li>
                     <li>1 Subida GM Gratis</li>
                 </ul>
