--- a/index.html
+++ b/index.html
@@ -36,6 +36,38 @@
 </html>
 
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    /* estilos generales */
+    body {
+      /* estilos para toda la página */
+    }
+
+    /* Media Query para teléfonos */
+    @media screen and (max-width: 767px) {
+      body {
+        font-size: 14px;
+      }
+      .elemento {
+        width: 100%;
+        box-sizing: border-box;
+        padding: 10px;
+      }
+      /* otros estilos específicos */
+    }
+  </style>
+</head>
+
+
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="estilos.css">
+</head>
 
 
 
